[package]
name = "zk-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ed-on-bls12-377 = "0.4.0"
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-std = "0.4.0"
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat", features = [
    "circom-2",
] }
